@@ -1,5 +1,6 @@
 v0.6.7
 - Enable 'Get More...' installation of widget providers
+- Return to using json to enable/disable Kodi debug logging
 - Cleanup
 
 v0.6.6
